Will use exp016 most and least confident SHASH curves for AMS poster. Finished running exp015, 016, 017 with CRPS and ENSO analysis.

--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "python version = 3.10.10 | packaged by conda-forge | (main, Mar 24 2023, 20:08:06) [GCC 11.3.0]\n",
       "numpy version = 1.26.4\n",
       "xarray version = 2024.5.0\n",
@@ -24545,6 +24547,67 @@
     "T_x_16 = trimmed_exp016['x']\n",
     "\n",
     "print(np.isnan(T_x_16).sum())  # Check for NaNs in your input data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'y' ()> Size: 8B\n",
+      "array(0)\n",
+      "<xarray.DataArray 'time' (time: 60036)> Size: 480kB\n",
+      "array([    0,     1,     2, ..., 60033, 60034, 60035])\n",
+      "Dimensions without coordinates: time\n"
+     ]
+    }
+   ],
+   "source": [
+    "trimmed_exp020 = xr.open_dataset('/pscratch/sd/p/plutzner/E3SM/bigdata/presaved/exp020_trimmed_test_dat.nc')\n",
+    "trimmed_exp020['x'].shape\n",
+    "trimmed_exp020['y'].shape\n",
+    "\n",
+    "T_x_20 = trimmed_exp020['y']\n",
+    "\n",
+    "print(np.isnan(T_x_20).sum())  # Check for NaNs in your input data\n",
+    "\n",
+    "print(T_x_20.time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = utils.get_config(\"exp016\")\n",
+    "\n",
+    "train_ds = filemethods.get_netcdf_da(str(config['perlmutter_data_dir']) + \"/input_vars.v2.LR.historical_0101.eam.h1.1850-2014.nc\")\n",
+    "train_ds = train_ds.sel(time = slice(str(config[\"databuilder\"][\"input_years\"][0]), str(config[\"databuilder\"][\"input_years\"][1])))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "60225"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_ds.time)"
    ]
   }
  ],
