Exp023 Analysis of Dry Months from model trained on All Months.

--- a/experiments/exp021_predictionsweep.ipynb
+++ b/experiments/exp021_predictionsweep.ipynb
@@ -340,6 +340,8 @@
     }
    ],
    "source": [
+    "# Calculate widest samples / Least Confident Samples\n",
+    "\n",
     "iqr = iqr_basic(output)\n",
     "\n",
     "percentiles = np.linspace(0, 100, 101)\n",
