--- a/playfile.ipynb
+++ b/playfile.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25635,11 +25635,48 @@
     "ax.add_feature(cfeature.BORDERS, linewidth=0.5, edgecolor='black')\n",
     "ax.add_feature(cfeature.STATES, linewidth=0.5, edgecolor='black')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Opened pickle file: bigdata/presaved/exp016_d_test_TARGET_1850-2014.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "exp021_target = open_data_file('bigdata/presaved/exp016_d_test_TARGET_1850-2014.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp021_target[\"x\"]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
