--- a/bigdata/ERA5/ERA5_inital_data_processing.ipynb
+++ b/bigdata/ERA5/ERA5_inital_data_processing.ipynb
@@ -596,6 +596,57 @@
     "print(np.isnan(era5_input.tp).sum())\n",
     "print(np.isnan(era5_input.skt).sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1d89d826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'lat' (lat: 181)> Size: 1kB\n",
+      "array([ 90.,  89.,  88.,  87.,  86.,  85.,  84.,  83.,  82.,  81.,  80.,  79.,\n",
+      "        78.,  77.,  76.,  75.,  74.,  73.,  72.,  71.,  70.,  69.,  68.,  67.,\n",
+      "        66.,  65.,  64.,  63.,  62.,  61.,  60.,  59.,  58.,  57.,  56.,  55.,\n",
+      "        54.,  53.,  52.,  51.,  50.,  49.,  48.,  47.,  46.,  45.,  44.,  43.,\n",
+      "        42.,  41.,  40.,  39.,  38.,  37.,  36.,  35.,  34.,  33.,  32.,  31.,\n",
+      "        30.,  29.,  28.,  27.,  26.,  25.,  24.,  23.,  22.,  21.,  20.,  19.,\n",
+      "        18.,  17.,  16.,  15.,  14.,  13.,  12.,  11.,  10.,   9.,   8.,   7.,\n",
+      "         6.,   5.,   4.,   3.,   2.,   1.,   0.,  -1.,  -2.,  -3.,  -4.,  -5.,\n",
+      "        -6.,  -7.,  -8.,  -9., -10., -11., -12., -13., -14., -15., -16., -17.,\n",
+      "       -18., -19., -20., -21., -22., -23., -24., -25., -26., -27., -28., -29.,\n",
+      "       -30., -31., -32., -33., -34., -35., -36., -37., -38., -39., -40., -41.,\n",
+      "       -42., -43., -44., -45., -46., -47., -48., -49., -50., -51., -52., -53.,\n",
+      "       -54., -55., -56., -57., -58., -59., -60., -61., -62., -63., -64., -65.,\n",
+      "       -66., -67., -68., -69., -70., -71., -72., -73., -74., -75., -76., -77.,\n",
+      "       -78., -79., -80., -81., -82., -83., -84., -85., -86., -87., -88., -89.,\n",
+      "       -90.])\n",
+      "Coordinates:\n",
+      "  * lat      (lat) float64 1kB 90.0 89.0 88.0 87.0 ... -87.0 -88.0 -89.0 -90.0\n",
+      "Attributes:\n",
+      "    standard_name:  latitude\n",
+      "    long_name:      latitude\n",
+      "    units:          degrees_north\n",
+      "    axis:           Y\n",
+      "<xarray.DataArray 'lon' (lon: 360)> Size: 3kB\n",
+      "array([  0.,   1.,   2., ..., 357., 358., 359.])\n",
+      "Coordinates:\n",
+      "  * lon      (lon) float64 3kB 0.0 1.0 2.0 3.0 4.0 ... 356.0 357.0 358.0 359.0\n",
+      "Attributes:\n",
+      "    standard_name:  longitude\n",
+      "    long_name:      longitude\n",
+      "    units:          degrees_east\n",
+      "    axis:           X\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(era5_input.lat)\n",
+    "print(era5_input.lon)"
+   ]
   }
  ],
  "metadata": {
